<resources>
    <string name="app_name">sine</string>
    <string name="Name">Name</string>
    <string name="Enter_Name">Enter Name</string>
    <string name="Age">Age</string>
    <string name="Enter_Age">Enter Age</string>
    <string name="display_in_textview">Display in textView</string>
    <string name="logo_image">logo_image</string>
    <string name="hng_zurii_i4g">Zuri_Internship</string>
</resources>