<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/Enter_Name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Age"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:hint="@string/Enter_Age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/display_in_textview"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="normal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/done"
        android:contentDescription="@string/logo_image" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hng_zurii_i4g"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"/>
</LinearLayout>